--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0,minimum-scale=1.0, maximum-scale=1.0,user-scalable=no">
-	<title>小浪旅行社--响应式</title>
+	<title>小朗旅行社--响应式</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 
 </head>
